--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -8,7 +8,7 @@
     padding: 14px 16px;
     text-decoration:none;
     font-size:20px;
-    color:antiquewhite;
+    color:burlywood;
     
 }
 .topnav a :visited {
@@ -19,6 +19,8 @@ img {
     height:500px;
     float:left;
     margin:10px;
+    border:dashed;
+    border-color:bisque;
 }
 #Intro {
     font-family:'Bad Script', cursive;
