Added info to about me page

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -42,3 +42,10 @@ img {
 #PurposeInfo {
     font-family: 'Marvel', sans-serif;
 }
+#AboutMeTitle {
+    font-family: 'Bad Script', cursive;
+    background-color: white;
+}
+#AboutMeInfo {
+    font-family: 'Marvel', sans-serif;
+}
