--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -53,12 +53,15 @@
 #AB1 {
     width:33%;
     height:500px;
+    float:left;
 }
 #AB2 {
     width: 33%;
     height: 500px;
+    float:left;
 }
 #AB3 {
     width: 33%;
     height: 500px;
+    float:left;
 }
