--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -76,6 +76,7 @@
     font-family: 'Bad Script', cursive;
     background-color: white;
     float:left;
+    width:33%;
 }
 #ProjectInfo {
     font-family: 'Marvel', sans-serif;
