--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -55,7 +55,7 @@
     border-color:bisque;
     height:500px;
     float:left;
-    margin:10px;
+    margin:10px 10px 10px 0px;
 }
 #AB2 {
     width: 25%;
