--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -27,6 +27,8 @@
     float:left;
     border:2px solid;
     border-color:bisque;
+    padding:0px 0px 0px 10px;
+    margin:10px 0px 0px 10px;
 }
 #Intro {
     font-family:'Bad Script', cursive;
