--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -90,6 +90,7 @@
     border-color: bisque;
     height: 500px;
     float: right;
+    margin:10px 0px 10px 10px;
 }
 ul {
     list-style-type:none;
