margin maybe fixed

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -27,6 +27,7 @@
     border:2px solid;
     border-color:bisque;
     width:50%;
+    margin:10px 0px 0px 10px;
 }
 #Intro {
     font-family: 'Bad Script', cursive;
