changed which was it floated

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -81,7 +81,7 @@
 #Project {
     font-family: 'Bad Script', cursive;
     background-color: white;
-    float:left;
+    float:right;
     text-align:right;
 }
 #ProjectInfo {
