--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -81,7 +81,7 @@
 #Project {
     font-family: 'Bad Script', cursive;
     background-color: white;
-    width:25%;
+    width:20%;
     text-align:right;
 }
 #ProjectInfo {
@@ -100,7 +100,7 @@
     border: dashed;
     border-color: bisque;
     height: 500px;
-    float: left;
+    float: right;
     margin: 10px;
 }
 ul {
@@ -135,7 +135,7 @@ ul {
     font-family: 'Bad Script', cursive;
     background-color: white;
     float: left;
-    width: 33%;
+    width: 30%;
 }
 
 #SkillsInfo {
