--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -83,6 +83,7 @@
     background-color: white;
     width:20%;
     text-align:right;
+    float:left;
 }
 #ProjectInfo {
     font-family: 'Marvel', sans-serif;
