--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -81,15 +81,15 @@
 #Project {
     font-family: 'Bad Script', cursive;
     background-color: white;
-    width:20%;
+    width:30%;
     float:left;
-    text-align:left;
+    padding:0px 0px 0px 10px;
 }
 #ProjectInfo {
     font-family: 'Marvel', sans-serif;
 }
 #P1 {
-    width: 75%;
+    width: 65%;
     border: dashed;
     border-color: bisque;
     height: 500px;
